# python-aws-template

./: .gitignore  cookiecutter.json  readme.md
{{cookiecutter.project}}/: .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.json  cdk_app.py  pyproject.toml  tasks.py
{{cookiecutter.project}}/.chalice/: config.json
{{cookiecutter.project}}/tests/: test_{{cookiecutter.project|replace("-", "_")}}.py  test_{{cookiecutter.project}}.py
{{cookiecutter.project}}/{{cookiecutter.project|replace("-", "_")}}/: __init__.py
