[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "{{cookiecutter.project|replace('-', '_')}}"
author = "{{cookiecutter.author}}"
author-email = "{{cookiecutter.email}}"
classifiers = ["License :: OSI Approved :: Apache Software License"]
# TODO: add version classifiers
requires = [
    "chalice",
    "boto3"
]

[tool.flit.metadata.requires-extra]
dev = [
    "pytest",
    "pre-commit",
    "black",
    "klaxon",
    "toml",
    "invoke",
    "cdk-chalice-lite",
]

[tool.black]
line-length=79
